apps/prod/rbx-comms/namespace.yml
# Namespace: rbx-comms
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-comms
  labels:
    app.kubernetes.io/part-of: rbx-comms
    environment: production
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
