apps/prod/rbx-comms/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-comms-postgres
  namespace: rbx-comms
spec:
  ports:
    - port: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rbx-comms-postgres
  namespace: rbx-comms
subsets:
  - addresses:
      - ip: 161.97.147.76
    ports:
      - port: 5432
