apps/prod/rbx-comms/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-comms
  namespace: rbx-comms
  labels:
    app.kubernetes.io/name: rbx-comms
spec:
  selector:
    app.kubernetes.io/name: rbx-comms
  ports:
    - port: 80
      targetPort: 8080
      name: http
